# sharp-aging

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
core/: NetworkMetrics.py
examples/: minimal_example.py
expression/: page.py
modul/: ranking.py
module/: __init__.py  disease_module_identification.py  ranking.py
pipeline/: __init__.py  sharp.py
sharp/: __init__.py  io.py
sharp/core/: __init__.py
sharp/expression/: __init__.py  page.py
sharp/pipeline/: sharp.py
